[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/easy_networking/example_lobby.gd" type="Script" id=1]

[node name="Lobby" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.5
margin_right = -0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_start = "res://scn/NetTest.tscn"

[node name="Connect" type="Panel" parent="."]
margin_left = 412.0
margin_top = 200.0
margin_right = 612.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 200 )

[node name="MarginContainer" type="MarginContainer" parent="Connect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Connect/MarginContainer"]
margin_right = 180.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect/MarginContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 14.0
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Connect/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Name" type="LineEdit" parent="Connect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 134.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Likeich"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="Connect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 180.0
margin_bottom = 24.0
text = "Host"

[node name="IPLabel" type="Label" parent="Connect/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 180.0
margin_bottom = 60.0
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Connect/MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 180.0
margin_bottom = 88.0

[node name="IPAddress" type="LineEdit" parent="Connect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 141.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="Connect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 145.0
margin_right = 180.0
margin_bottom = 24.0
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect/MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 180.0
margin_bottom = 106.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" type="Panel" parent="."]
visible = false
margin_left = 412.0
margin_top = 200.0
margin_right = 612.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 200 )

[node name="MarginContainer" type="MarginContainer" parent="Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby/MarginContainer"]
margin_right = 180.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Lobby/MarginContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 14.0
text = "Lobby"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="VBoxContainer" parent="Lobby/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Lobby/MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 180.0
margin_bottom = 162.0
alignment = 1

[node name="ExitButton" type="Button" parent="Lobby/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 50.0
margin_right = 85.0
margin_bottom = 20.0
text = "Exit"

[node name="StartButton" type="Button" parent="Lobby/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 89.0
margin_right = 130.0
margin_bottom = 20.0
disabled = true
text = "Start"

[node name="ErrorLabel" type="Label" parent="Lobby/MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 180.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Connect/MarginContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Connect/MarginContainer/VBoxContainer/HBoxContainer2/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Lobby/MarginContainer/VBoxContainer/HBoxContainer2/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Lobby/MarginContainer/VBoxContainer/HBoxContainer2/StartButton" to="." method="_on_StartButton_pressed"]
